amsynth 1.12.4 -- 2022-01-08

  - Fixed lv2 .ttl syntax error


amsynth 1.12.3 -- 2022-01-01

  - Added PatriksBank04 and PatriksBank05.
  - Fixed click when playing a note for the first time - issue #196
  - Stopped vendoring lv2 headers; install lv2-dev (or similar) via your package manager.


amsynth 1.12.2 -- 2020-11-20

  - Fixed a regression in 1.12.0 that broke ALSA MIDI


amsynth 1.12.1 -- 2020-11-14

  - Fixed LV2 manifest format error


amsynth 1.12.0 -- 2020-11-08

  - Improved HiDPI autodetection and added --force-device-scale-factor command line option
  - Presets are now available to be loaded in VST hosts using the generic GUI (e.g. REAPER)
  - Fixed a bug that caused MIDI channel and polyphony settings from the command line or
    configuration file to be ignored.
  - Fixed a bug that caused MIDI channel setting to be ignored when sending MIDI over JACK
  - Fixed a MIDI parsing bug in the VST plugin that caused stuck notes in REAPER
  - Fixed a crash when compiled with LASH support but without a LASH server running


amsynth 1.11.0 -- 2020-09-20

  - Added mouse wheel support for controls
  - Implemented UI upscaling for background and controls on HiDPI displays
  - Fixed a regression in 1.10.0 that changed the sound of patches using ring modulation
  - Fixed LV2 lint error caused by missing minorVersion and microVersion
  - Removed dependency on oscpack for Non Session Manager support


amsynth 1.10.0 -- 2020-05-07

  - Implemented smoothing / de-zippering to improve sound quality while adjusting parameters
  - amsynth user files (config, banks, etc.) now live in XDG-compliant directories
    - $XDG_CONFIG_HOME (~/.config/amsynth)
    - $XDG_DATA_HOME (~/.local/share/amsynth)
  - Added `jack_autoconnect` configuration option
  - Disabled VST GUI in REAPER


amsynth 1.9.0 -- 2019-04-13

  - Added support for NSM (Non Session Manager)
  - Improved FreeBSD OSS audio support
  - Sustain pedal can now be used in Mono and Legato modes