@@ -28,8 +28,12 @@
 
 G_BEGIN_DECLS
 
+#define DEFAULT_SCALING 0
+
 GtkWidget *
 editor_pane_new(void *synthesizer, GtkAdjustment **adjustments, gboolean is_plugin, int scaling_factor);
+
+int default_scaling_factor();
 
 void modal_midi_learn(Param param_index);
 
