@@ -1,3 +1,8 @@
+TBD
+
+  - Added HiDPI scaling support to VST plugin UI.
+
+
 amsynth 1.12.4 -- 2022-01-08
 
   - Fixed lv2 .ttl syntax error
